--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -1,4 +1,4 @@
-name: Node.js CI
+name: Node.js CI/CD with Minikube
 
 on:
   push:
@@ -14,6 +14,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Set up Minikube
+        uses: kubeval/setup-minikube@v1
+        with:
+          minikube_version: latest
+
+      - name: Set up kubectl
+        uses: kubeval/setup-kubectl@v1
+
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
@@ -27,3 +35,13 @@ jobs:
 
       - name: Build application
         run: npm run build
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Deploy to Minikube
+        run: |
+          kubectl apply -f kubernetes/deployment.yaml
+          
