--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -15,12 +15,12 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Minikube
-        uses: kubeval/setup-minikube@v1
+        uses: kubeactions/minikube@v0.1.2
         with:
           minikube_version: latest
 
       - name: Set up kubectl
-        uses: kubeval/setup-kubectl@v1
+        uses: kubeactions/kubectl@v0.1.2
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
@@ -44,4 +44,4 @@ jobs:
       - name: Deploy to Minikube
         run: |
           kubectl apply -f kubernetes/deployment.yaml
-          
+
