--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -2,42 +2,36 @@ name: Node.js CI/CD with Minikube
 
 on:
   push:
-    branches: [ "master" ]
+    branches:
+      - master
   pull_request:
-    branches: [ "master" ]
+    branches:
+      - master
 
 jobs:
-  build:
+  containerize:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up kubectl
-        uses: azure/setup-kubectl@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14'
+      - name: Log in to Docker registry
+        run: echo "${{ secrets.DOCKER_REGISTRY_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_REGISTRY_USERNAME }} --password-stdin ${{ secrets.DOCKER_REGISTRY }}
 
-      - name: Install dependencies
-        run: npm install
-
-  
-      - name: Build application
-        run: npm run build
+      - name: Build and push Docker image
+        run: |
+          docker buildx build --push --platform linux/amd64,linux/arm64 -t ${{ secrets.DOCKER_REGISTRY }}/${{ github.repository }}:${{ github.sha }} .
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
-
+    needs: containerize
     steps:
-      - name: Configure kubectl context for Minikube
-        run: minikube kubectl -- get pods
+      - name: Install kubectl
+        uses: azure/setup-kubectl@v1
 
       - name: Deploy to Minikube
         run: |
           kubectl apply -f kubernetes/deployment.yaml
-          
