--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -34,4 +34,4 @@ jobs:
 
       - name: Deploy to Minikube
         run: |
-          kubectl apply -f kubernetes/deployment.yaml
+          kubectl apply -f k8s/deployment.yaml
